<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/bg_activity_list"
    android:padding="@dimen/spacing_medium">

    <TextView
        android:id="@+id/tvVariableCount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bulk_sms_variables_count_default"
        android:textSize="@dimen/text_large"
        android:textStyle="bold"
        android:textColor="@color/color_on_surface"
        android:layout_marginBottom="@dimen/spacing_small" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/template_variables_instruction"
        android:textSize="@dimen/text_medium"
        android:textColor="@color/color_on_surface_variant"
        android:layout_marginBottom="@dimen/spacing_small" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewVariables"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_medium"
        android:maxHeight="200dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_outline_variant"
        android:layout_marginVertical="@dimen/spacing_medium" />

    <TextView
        android:id="@+id/tvPreviewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bulk_sms_preview_title"
        android:textSize="@dimen/text_large"
        android:textStyle="bold"
        android:textColor="@color/color_on_surface"
        android:layout_marginBottom="@dimen/spacing_small" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewPreview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_medium"
        android:maxHeight="300dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnClose"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/spacing_small"
            android:text="@string/subscription_close" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnUseTemplate"
            style="@style/Widget.Material3.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/template_variables_use_template" />

    </LinearLayout>

</LinearLayout>
